--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing note</h1>
+<div class="col-sm-8 m-auto">
+<h1 class="my-4">Editing note</h1>
 
 <%= render "form", note: @note %>
 
@@ -7,4 +8,5 @@
 <div>
   <%= link_to "Show this note", @note %> |
   <%= link_to "Back to notes", notes_path %>
+</div>
 </div>
