--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New note</h1>
+<div class="col-sm-8 m-auto">
+<h1 class="my-4">New note</h1>
 
 <%= render "form", note: @note %>
 
@@ -6,4 +7,5 @@
 
 <div>
   <%= link_to "Back to notes", notes_path %>
+</div>
 </div>
