--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,10 +1,21 @@
-<p style="color: green"><%= notice %></p>
 
-<%= render @note %>
 
-<div>
-  <%= link_to "Edit this note", edit_note_path(@note) %> |
-  <%= link_to "Back to notes", notes_path %>
+<div class="col-md-4 col-sm-6 content-card">
+    <div class="card-big-shadow">
+      <div class="card card-just-text" data-background="color" data-color="blue" data-radius="none">
+        <div class="content">
+          <%= render @note %>
+          <div class="links">
+            <a href="<%= edit_note_path(@note) %>">
+              <i class="fa-solid fa-pen-to-square"></i>
+            </a>
+            <a href="<%= notes_path %>">
+              <i class="fa-solid fa-backward-step"></i>
+            </a>
 
-  <%= button_to "Destroy this note", @note, method: :delete %>
-</div>
+            <%= button_to "Destroy this note", @note, method: :delete, class: %w(btn btn-sm btn-danger my-4) %>
+          </div>
+        </div>
+      </div> <!-- end card -->
+    </div>
+  </div>
